# Lagga

./: README.md  index.html  overlay.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/canvas/: render-loop.ts  spring-physics.ts  tether-renderer.ts
src/components/: AdvancedPanel.tsx  BundleGallery.tsx  CanvasSurface.tsx  CosmicBackground.tsx  CosmoUI.tsx  DesignerBundlePanel.tsx  DiagnosticsPanel.tsx  ErrorBoundary.tsx  HealthBadge.tsx  HelpModal.tsx  PresetThumbnail.tsx  Sparkline.tsx  StatusStrip.tsx  TrailPanel.tsx  TrailPreview.tsx  TrailTabBar.tsx
src/engine/: constants.ts  frame-monitor.ts  health-scorer.ts  input-tracker.ts  ring-buffer.ts  stall-detector.ts  types.ts
src/lib/: native-bridge.ts
src/overlay/: main.ts  overlay-renderer.ts
src/shared/: presets.ts  settings.ts  types.ts
src/stores/: metrics-store.ts  trail-store.ts
